fix: text-wrap

--- a/src/blocks/product/__desc/product__desc.css
+++ b/src/blocks/product/__desc/product__desc.css
@@ -5,4 +5,9 @@
   font-size: 16px;
   line-height: 20px;
   color: #3F3F3F;
+  text-overflow: ellipsis;
+  white-space: normal;
+  overflow: hidden;
+  max-height: 80px;
+  margin: 0;
 }
