--- a/src/blocks/product/__price/product__price.css
+++ b/src/blocks/product/__price/product__price.css
@@ -5,4 +5,5 @@
   line-height: 30px;
   color: #3F3F3F;
   padding: 0 16px;
+  margin: auto 0 24px 0;
 }
