--- a/src/blocks/product/__title/product__title.css
+++ b/src/blocks/product/__title/product__title.css
@@ -6,4 +6,7 @@
   font-size: 20px;
   line-height: 25px;
   color: #3F3F3F;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
