--- a/src/blocks/product/product.css
+++ b/src/blocks/product/product.css
@@ -6,6 +6,9 @@
 .product {
   height: 423px;
   width: 332px;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: flex-start;
   background: #FFFEFB;
   box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.04), 0px 6px 10px rgba(0, 0, 0, 0.02);
   border-radius: 4px;
